<resources>
    <string name="app_name">OwnNameGen</string>
    <string name="action_settings">Settings</string>
    <string name="FamilyName_kr">성</string>
    <string name="BirthDate">생년월일</string>
    <string name="BirthTime">탄생시간</string>
    <string name="BirthLocation">탄생지역</string>
    <string name="BirthTitle">생년월일시(生年月日時)</string>
    <string name="NameType">이름 유형</string>
    <string name="NameType1">외자 이름</string>
    <string name="NameType2">두자 이름</string>
    <string name="NameType3">세자 이름</string>
    <string name="KorProOptionTitle">한글 발음 음양오행 옵션</string>
    <string name="ProOptionAll">발음 음양오행 적용</string>
    <string name="ProOptionYinYang">음양 평가 적용</string>
    <string name="ProOptionFiveEle_first">초성 오행 상생 평가 적용</string>
    <string name="ProOptionFiveEle_firstlast">초성과 종성 오행 상생 평가 적용</string>
    <string name="ProOptionFiveEle_firstOrlast">오행 상생 평가 모두 포함</string>
    <string name="SajuFiveEleTitle">사주오행</string>
    <string name="ResultChNamesTitle">가능한 한문 이름 조합</string>
    <string name="ChOptionTitle">한자 이름 조합 옵션</string>
    <string name="HanjaSuri81">81수리 분석 적용</string>
    <string name="HanjaSuriFiveEleTitle">수리오행 적용</string>
    <string name="HanjaSuriYinYangTitle">수리음양 적용</string>
    <string name="HanjaSajuFiveEleTitle">사주오행 평가 적용</string>
    <string name="HanjaSummaryTitle">이름 한자 풀이</string>
    <string name="BirthSummaryTitle">생년월일시(生年月日時) 풀이</string>
    <string name="SajuFiveEleSummaryTitle">사주오행 풀이</string>
    <string name="Suri81SummaryTitle">81수리 분석</string>





</resources>

