<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="wookdev.team.ownnamegen.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="513dp"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:layout_weight="10"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="visible"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="8dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ProgressBar
                    android:id="@+id/progressBarKr"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/TitleFamilyNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#3F51B5"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/FamilyName_kr"
                    android:textColor="#ffffff" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border">

                <AutoCompleteTextView
                    android:id="@+id/FamilyNameACTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:completionThreshold="1"
                    android:gravity="center_vertical|center_horizontal" />

                <Spinner
                    android:id="@+id/FamilyNameSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical|center_horizontal" />

            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#3F51B5">

                <TextView
                    android:id="@+id/TitleBirthDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/BirthTitle"
                    android:textColor="#FFFFFF" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/birthDateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/BirthDate" />

                <Button
                    android:id="@+id/birthTimeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/BirthTime" />
                <Button
                    android:id="@+id/birthLocationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/BirthLocation" />
            </TableRow>
        </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3F51B5">

            <TextView
                android:id="@+id/TitleNameType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/NameType"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/nametypeRradioGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checkedButton="@+id/nametypeRB2"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/nametypeRB1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/NameType1"
                    android:enabled="false"/>
                <RadioButton
                    android:id="@+id/nametypeRB2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="2"
                    android:text="@string/NameType2" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#3F51B5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/KorProOptionTitle"
                    android:textColor="#FFFFFF" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <CheckBox
                    android:id="@+id/prooptionallCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ProOptionAll" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <CheckBox
                    android:id="@+id/prooptionYYCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/ProOptionYinYang" />
            </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RadioGroup
                        android:id="@+id/prooptionfiveeleRG"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >
                        <RadioButton
                            android:id="@+id/prooptionfirstRB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_weight="1"
                            android:text="@string/ProOptionFiveEle_first"
                            android:enabled="false"/>

                        <RadioButton
                            android:id="@+id/prooptionfirstlastRB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_weight="1"
                            android:text="@string/ProOptionFiveEle_firstlast"
                            android:enabled="false"/>

                        <RadioButton
                            android:id="@+id/prooptionfirstorlastRB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_weight="1"
                            android:text="@string/ProOptionFiveEle_firstOrlast"
                            android:enabled="false"/>
                    </RadioGroup>
        </TableRow>
        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#009688">
            <TextView
                android:id="@+id/possiblecntsTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="#FFFFFF" />
        </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <AutoCompleteTextView
                    android:id="@+id/possibleNamesACTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:completionThreshold="1"
                    android:gravity="center_vertical|center_horizontal" />
            </TableRow>
            </TableLayout>
    </LinearLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>
