<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- 타이틀바 -->
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/TitleKoreanNameBig"
        android:textSize="20sp"
        android:textColor="#fff"
        android:gravity="center"
        android:background="#ff7a00"
        android:layout_width="match_parent"
        android:layout_height="53dp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/HanjaSummaryTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/HanjaSummaryTitle"
            android:background="#3F51B5"
            android:textColor="#FFFFFF" />
        <LinearLayout
            android:padding="24dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/hanja_mean1"
                android:textSize="15sp"
                android:textColor="#000"
                android:alpha="0.87"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginBottom="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/hanja1"
                android:textSize="20sp"
                android:textColor="#000"
                android:alpha="0.87"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginBottom="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/hanja_mean2"
                android:textSize="15sp"
                android:textColor="#000"
                android:alpha="0.87"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginBottom="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/hanja2"
                android:textSize="20sp"
                android:textColor="#000"
                android:alpha="0.87"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginBottom="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <!-- //end 타이틀바 -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/BirthSummaryTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/BirthSummaryTitle"
            android:background="#3F51B5"
            android:textColor="#FFFFFF" />
        <LinearLayout
            android:padding="24dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            >
            <TextView
                android:id="@+id/birth_date"
                android:textSize="18sp"
                android:textColor="#000"
                android:alpha="0.87"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:layout_marginBottom="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/birth_saju"
                android:textSize="18sp"
                android:textColor="#000"
                android:alpha="0.87"
                android:gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:layout_marginBottom="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/SajuFiveEleSummaryTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/SajuFiveEleSummaryTitle"
            android:background="#3F51B5"
            android:textColor="#FFFFFF" />
    <LinearLayout
        android:padding="24dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        >
        <TextView
            android:id="@+id/TV_FiveEleTree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="TextView" />

        <TextView
            android:id="@+id/TV_FiveEleFire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="TextView" />

        <TextView
            android:id="@+id/TV_FiveEleSoil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="TextView" />

        <TextView
            android:id="@+id/TV_FiveEleMetal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="TextView" />

        <TextView
            android:id="@+id/TV_FiveEleWater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="TextView" />
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Suri81SummaryTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#3F51B5"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Suri81SummaryTitle"
            android:textColor="#FFFFFF" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/suri_child"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:alpha="0.87"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginBottom="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />
                <TextView
                    android:id="@+id/suri_young"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:alpha="0.87"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginBottom="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />
                <TextView
                    android:id="@+id/suri_old"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:alpha="0.87"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginBottom="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />
                <TextView
                    android:id="@+id/suri_total"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:alpha="0.87"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginBottom="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <!-- Notice -->

    <View
        android:background="#66bdbdbd"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <!-- 닫기 버튼 -->
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="확인"
            android:textSize="15sp"
            android:textColor="#ff7a00"
            android:padding="16dp"
            android:gravity="center"
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:onClick="mOnClose"/>
    </LinearLayout>
    <!--// 닫기 버튼 -->
</LinearLayout>